# spec-driven-todo-app

./: .env.example  .gitignore  CLAUDE.md  DOCKER_QUICKSTART.md  DOCKER_README.md  GEMINI.md  JWT_TESTING_GUIDE.md  PHASE3_TESTING_GUIDE.md  README.md  docker-compose.yml  netlify.toml  pyproject.toml  test_jwt_api.sh  test_phase3_auth.py
.claude/: README-FASTAPI-SYSTEM.md
ai-agent/: .dockerignore  .env.example  .gitignore  DEPLOYMENT_RAILWAY.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICKSTART.md  DOCKER_README.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
ai-agent/alembic/: env.py
ai-agent/alembic/versions/: 78112f231a53_create_conversations_and_messages_tables.py
ai-agent/src/ai_agent/: __init__.py  main.py
ai-agent/src/ai_agent/agent/: __init__.py  agent_service.py  config.py  context_manager.py  mcp_connection.py  message_converter.py  timezone_utils.py
ai-agent/src/ai_agent/api/: chat.py  deps.py  health.py  history.py
ai-agent/src/ai_agent/database/: __init__.py  connection.py  models.py
ai-agent/src/ai_agent/services/: __init__.py  api_key_retrieval.py  auth.py  jwt_validation.py
ai-agent/tests/: conftest.py
ai-agent/tests/agent/contract/: __init__.py  test_agent_config.py  test_agent_service.py  test_mcp_connection.py
ai-agent/tests/agent/integration/: __init__.py  test_agent_execution.py  test_agent_workflow.py  test_context_loading.py
ai-agent/tests/agent/unit/: test_context_manager.py  test_message_converter.py  test_task_context.py  test_timezone_utils.py
ai-agent/tests/api/: test_chat_with_agent.py
auth-server/: .dockerignore  .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  Dockerfile  (+12 more)
backend/: .dockerignore  .env.example  .renderignore  AUTHENTICATION_DEMO.md  DEPLOYMENT_RENDER.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICKSTART.md  DOCKER_README.md  DOCKER_SECURITY_CHECKLIST.md  Dockerfile  PHASE10_IMPLEMENTATION.md  README.md  alembic.ini  build.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  render.yaml  requirements.txt  test_jwt_manual.py
backend/alembic/: env.py
backend/alembic/versions/: 20251215_001_add_priority_and_due_date.py  20251224_002_create_user_api_keys_table.py  20260305_003_add_notifications_and_reminder_sent.py
backend/src/: config.py
backend/src/api/: dependencies.py  main.py
backend/src/api/middleware/: __init__.py  security_headers.py
backend/src/api/routers/: api_keys.py  auth.py  health.py  notifications.py  tasks.py
backend/src/api/schemas/: api_key.py  auth.py  error.py  notification.py  task.py
backend/src/database/: add_priority_due_date_migration.py  connection.py  migrate_notifications.py  migrate_user_api_keys.py  migrations.py  repository.py
backend/src/models/: database.py  notification.py  user_api_key.py
backend/src/services/: api_key_service.py  auth_service.py  encryption_service.py  gemini_validator.py  jwt_service.py  notification_service.py  rate_limiter.py  refresh_token_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_better_auth_integration.py  test_health.py  test_security_headers.py  test_service_auth.py  test_tasks_bulk_delete.py  test_tasks_create.py  test_tasks_delete.py  test_tasks_get_single.py  test_tasks_list.py  test_tasks_update_completion.py  test_tasks_update_details.py
backend/tests/load/: README.md  __init__.py  cleanup_load_test_data_safe.py  get-load-test-user-ids.sh  jwt_auth_load_test.py  start-load-test.sh
backend/tests/unit/: test_rate_limiter.py
mcp-server/: .dockerignore  .env.example  CLAUDE_DESKTOP_SETUP.md  DEPLOYMENT_RAILWAY.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICKSTART.md  DOCKER_README.md  Dockerfile  E2E_SMOKE_TEST.md  IMPLEMENTATION_SUMMARY.md  PHASE8_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_REVIEW.md  SUCCESS_CRITERIA_VERIFICATION.md  TESTING.md  docker-compose.yml  pyproject.toml  test_all_tools.py  test_mcp_server.py
mcp-server/src/: client.py  config.py  server.py
mcp-server/src/schemas/: task.py
mcp-server/src/tools/: create_task.py  delete_task.py  list_tasks.py  mark_completed.py  update_task.py
mcp-server/tests/: conftest.py
mcp-server/tests/contract/: test_task_schemas.py
mcp-server/tests/integration/: test_create_task.py  test_list_tasks.py  test_user_context.py  test_workflows.py
mcp-server/tests/unit/: test_client.py
(+407 files in other folders)
