[project]
name = "ai-agent"
version = "0.1.0"
description = "Chat persistence service for AI conversations"
readme = "README.md"
authors = [
    { name = "hubaib", email = "hubaibm9@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "sqlmodel>=0.0.14",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "httpx>=0.25.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.3.0",
    "openai-agents>=0.6.4",
    "tiktoken>=0.5.0",
    "pydantic-settings>=2.0.0",
    "mcp>=1.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
ai-agent = "ai_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
