[project]
name = "backend"
version = "0.1.0"
description = "FastAPI REST API for Todo Application"
readme = "README.md"
authors = [
    { name = "hubaib", email = "hubaibm9@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "greenlet>=3.0.0",
    "cryptography>=46.0.3",
    "google-genai>=1.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
api = "src.api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "asyncio: async test",
    "integration: integration test",
    "unit: unit test",
    "contract: contract test",
]
